src/main/fabric8/postgres-dc.yml
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    application: ${APPLICATION_NAME}
  name: ${APPLICATION_NAME}-postgresql
spec:
  replicas: 1
  selector:
    deploymentConfig: ${APPLICATION_NAME}-postgresql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        application: ${APPLICATION_NAME}
        deploymentConfig: ${APPLICATION_NAME}-postgresql
      name: ${APPLICATION_NAME}-postgresql
    spec:
      containers:
      - env:
        - name: POSTGRESQL_USER
          value: ${DB_USERNAME}
        - name: POSTGRESQL_PASSWORD
          value: ${DB_PASSWORD}
        - name: POSTGRESQL_DATABASE
          value: ${DB_DATABASE}
        - name: POSTGRESQL_MAX_CONNECTIONS
          value: ${POSTGRESQL_MAX_CONNECTIONS}
        - name: POSTGRESQL_MAX_PREPARED_TRANSACTIONS
          value: ${POSTGRESQL_MAX_CONNECTIONS}
        - name: POSTGRESQL_SHARED_BUFFERS
          value: ${POSTGRESQL_SHARED_BUFFERS}
        image: postgresql
        name: ${APPLICATION_NAME}-postgresql
        ports:
        - containerPort: 5432
          protocol: TCP
        volumeMounts:
        - mountPath: /var/lib/pgsql/data
          name: ${APPLICATION_NAME}-postgresql-pvol
      terminationGracePeriodSeconds: 60
      volumes:
      - name: ${APPLICATION_NAME}-postgresql-pvol
        persistentVolumeClaim:
          claimName: ${APPLICATION_NAME}-postgresql-claim
  triggers:
  - imageChangeParams:
      automatic: true
      containerNames:
      - ${APPLICATION_NAME}-postgresql
      from:
        kind: ImageStreamTag
        name: postgresql:latest
        namespace: ${IMAGE_STREAM_NAMESPACE}
    type: ImageChange
  - type: ConfigChange
