src/main/fabric8/https-svc.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    description: The web server's https port.
  labels:
    application: ${APPLICATION_NAME}
  name: secure-${APPLICATION_NAME}
spec:
  ports:
  - port: 8443
    targetPort: 8443
  selector:
    deploymentConfig: ${APPLICATION_NAME}
