src/main/fabric8/postgres-svc.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    description: The database server's port.
  labels:
    application: ${APPLICATION_NAME}
  name: ${APPLICATION_NAME}-postgresql
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    deploymentConfig: ${APPLICATION_NAME}-postgresql
