src/main/fabric8/http-route.yml
apiVersion: v1
id: ${APPLICATION_NAME}-http
kind: Route
metadata:
  annotations:
    description: Route for application's http service.
  labels:
    application: ${APPLICATION_NAME}
  name: ${APPLICATION_NAME}
spec:
  host: ${HOSTNAME_HTTP}
  to:
    name: ${APPLICATION_NAME}
