src/main/fabric8/https-route.yml
apiVersion: v1
id: ${APPLICATION_NAME}-https
kind: Route
metadata:
  annotations:
    description: Route for application's https service.
  labels:
    application: ${APPLICATION_NAME}
  name: secure-${APPLICATION_NAME}
spec:
  host: ${HOSTNAME_HTTPS}
  tls:
    termination: passthrough
  to:
    name: secure-${APPLICATION_NAME}
